--- a/css/musicstylesheet.css
+++ b/css/musicstylesheet.css
@@ -5,7 +5,7 @@ body{
 }
 
 #header{
-	background: linear-gradient(-90deg, #4286f4, white, #4286f4);
+	background: linear-gradient(-90deg, #4286f4, #000, #4286f4);
 	overflow: hidden;
 	padding-top: 15px;
 	padding-bottom: 15px;
@@ -57,7 +57,7 @@ li {
 }
 
 #container{
-	 background: linear-gradient(-90deg, #4286f4, white, #4286f4);
+	 background: linear-gradient(-90deg, #4286f4, #000, #4286f4);
 }
 
 .box {
