--- a/css/storestylesheet.css
+++ b/css/storestylesheet.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+{border-radius: 8px;}{border-radius: 8px;}{border-radius: 8px;}@charset "utf-8";
 /* CSS Document */
 body{
 	margin: 0px;
